--- a/.env
+++ b/.env
@@ -10,8 +10,8 @@
 #Online
 APP_PORT=3000
 DB_PORT=3306
-DB_HOST=cseairlinedb.mysql.database.azure.com
-DB_USER=mahela@cseairlinedb
+DB_HOST=192.53.170.38
+DB_USER=mahela
 DB_PASS=Pradeep!997
 MYSQL_DB=bairway
 
