--- a/.env
+++ b/.env
@@ -1,10 +1,10 @@
 #Local
-APP_PORT=2000
-DB_PORT=3306
-DB_HOST=localhost
-DB_USER=root
-DB_PASS=Lahiru7*
-MYSQL_DB=bairway
+#APP_PORT=2000
+#DB_PORT=3306
+#DB_HOST=localhost
+#DB_USER=root
+#DB_PASS=Lahiru7*
+#MYSQL_DB=bairway
 
 
 #Online
@@ -15,3 +15,12 @@ MYSQL_DB=bairway
 #DB_PASS=Pradeep!997
 #MYSQL_DB=bairway
 
+
+
+#Online
+APP_PORT=2000
+DB_PORT=3306
+DB_HOST=192.53.170.38
+DB_USER=mahela
+DB_PASS=Pradeep!997
+MYSQL_DB=bairway
