--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "jimp": "^0.16.1",
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.21",
     "multer": "^1.4.2",
     "mysql": "^2.18.1"
   },
