--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "joi": "^17.4.2",
     "jsonwebtoken": "^8.5.1",
     "lodash": "^4.17.21",
+    "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql2": "^2.3.0",
     "sequelize": "^6.6.5"
