--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "moment": "^2.29.1",
     "multer": "^1.4.2",
     "mysql2": "^2.3.0",
+    "nodemailer": "^6.6.3",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "sequelize": "^6.6.5"
   },
   "devDependencies": {
