--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start": "nodemon index.js",
     "dev": "nodemon index.js",
-    "test": "jest --watchAll"
+    "test": "jest --verbose --coverage --forceExit --watchAll --maxWorkers=1"
   },
   "keywords": [],
   "author": "",
