--- a/env.example
+++ b/env.example
@@ -4,7 +4,15 @@ JWT_SECRET=jwtsecret
 EMAIL_KEY=emailkey
 SENDER_EMAIL=rlccovidtracker@gmail.com
 CLIENT_URL=http://localhost:3000
-DB_NAME=covid_test
-DB_HOST=localhost
-DB_USER=root
-DB_PW=
+DEV_DB_NAME=covid_test
+DEV_DB_HOST=localhost
+DEV_DB_USER=root
+DEV_DB_PW=
+TEST_DB_NAME=coronatracker_testing_db
+TEST_DB_HOST=localhost
+TEST_DB_USER=root
+TEST_DB_PW=
+
+SMS_ACCOUNT_SID =ACff1bb2beff80e8b890771204986c3977
+SMS_AUTH_TOKEN =7ff19762534ef3fb7e82a670033e7618
+
