--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "config": "^3.3.6",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
-    "dotenv": "^8.2.0",
+    "dotenv": "^8.6.0",
     "express": "^4.17.1",
     "jimp": "^0.16.1",
     "joi": "^17.4.2",
@@ -29,7 +29,8 @@
     "mysql2": "^2.3.0",
     "nodemailer": "^6.6.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "sequelize": "^6.6.5"
+    "sequelize": "^6.6.5",
+    "twilio": "^3.69.0"
   },
   "devDependencies": {
     "jest": "^27.2.1",
