--- a/env.example
+++ b/env.example
@@ -12,6 +12,10 @@ TEST_DB_NAME=coronatracker_testing_db
 TEST_DB_HOST=localhost
 TEST_DB_USER=root
 TEST_DB_PW=
+PROD_DB_NAME=covid_test
+PROD_DB_HOST=
+PROD_DB_USER=
+PROD_DB_PW=
 SMS_ACCOUNT_SID =ACff1bb2beff80e8b890771204986c3977
 SMS_AUTH_TOKEN =7ff19762534ef3fb7e82a670033e7618
 
